# napkon-string-matching

./: .flake8  .gitignore  Dockerfile  Dockerfile.base  README.md  config.yml  final_hap.py  main.py  pop-suep.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-base-publish.yml  docker-publish.yml  python-app.yml
input/: .gitignore  dataset_definitions.json  gecco_definition.json  input__gecco_definition.json  table_definitions.json
input/mappings/: .gitignore
napkon_string_matching/: README.md  __init__.py  constants.py  matcher.py  matching.py  misc.py  token.py
napkon_string_matching/compare/: README.md  __init__.py  compare.py  constants.py  score_functions.py
napkon_string_matching/files/: dataframe.py  dataset_table.py  results.py
napkon_string_matching/files/dataframe/: __init__.py  read.py  (+1 more)
napkon_string_matching/io/: __init__.py
napkon_string_matching/prepare/: README.md  __init__.py  constants.py  generate.py  match_preparator.py  token.py
napkon_string_matching/terminology/: README.md  __init__.py  constants.py  loinc.py  loinc_search.py  mesh.py  provider.py  provider_base.py  table_request.py  terminology_provider.py
napkon_string_matching/tests/: __init__.py
napkon_string_matching/types/: README.md  category.py  comparable.py  comparable_data.py  comparable_subscriptable.py  data.py  dataset_definition.py  gecco-definition.py  gecco_definition.py  identifier.py  kds_definition.py  mapping.py  questionnaire.py  readable_json_frame.py  subscriptable.py  table_categories.py
(+57 files in other folders)
