[project]
authors = [
  {name = "Alexander Schulze", email = "alexander.schulze@bih-charite.de"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "nltk>=3.7",
  "numpy>=1.23.1",
  "openpyxl>=3.0.10",
  "pandas>=1.4.3",
  "psycopg2-binary>=2.9.3",
  "PyYAML>=6.0",
  "rapidfuzz>=2.1.4",
  "requests>=2.28.1",
]
description = "Match different questions from the NAPKON project"
name = "napkon_string_matching"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build]
packages = ["napkon_string_matching"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra -q"
pythonpath = [
  ".",
]
testpaths = [
  "./napkon_string_matching/tests",
]
